@@ -613,6 +613,14 @@ dfsch_object_t* dfsch_sym_unquote_splicing(){
   cache = dfsch_make_symbol("unquote-splicing");
   return cache;
 }
+dfsch_object_t* dfsch_sym_else(){
+  static object_t *cache = NULL;
+  if (cache)
+    return cache;
+
+  cache = dfsch_make_symbol("else");
+  return cache;
+}
 dfsch_object_t* dfsch_bool(int bool){
   return bool?dfsch_sym_true():NULL;
 }
